--- a/index.html
+++ b/index.html
@@ -50,50 +50,61 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="our-features">
-                <h3 class="section-title"><span id="quick-list" class="text-light-grey">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
+                <h3 class="section-title"><span id="quick-list" class="text-light-grey">Quick list</span> <span>of
+                        Our</span> <span class="text-primary">Features</span></h3>
                 <p class="feature-description text-light-grey">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
 
         <!-- features will enjoy -->
-         <section>
+        <section>
             <h3 class="section-title">Features you will love & enjoy</h3>
 
-         </section>
+        </section>
 
-         <!-- some facts -->
-          <section class="some-facts">
-            <h3 class="section-title">Features you will love & enjoy</h3>
-            <p class="text-light-gray">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+        <!-- some facts -->
+        <section class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.
             </p>
             <div class="facts-container">
                 <!-- .fast*4>img.fact-icon+h4.fact-number+h5.fact-name -->
-                <div class="fast">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winning</h5>
+                    </div>
                 </div>
-                <div class="fast">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
                 </div>
-                <div class="fast">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
                 </div>
-                <div class="fast">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
                 </div>
             </div>
-          </section>
+        </section>
     </main>
     <footer></footer>
 </body>
