--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </p>
                 </div>
             </div>
-            <div>
+            <div class="featured-architect">
                 <img src="images/architect.png" alt="">
                 <button id="experience-badge" class="btn-primary">
                     <span id="experience-year">10+Years</span> 
